competex-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: competex-backend-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost # Use localhost for development, replace for prod: competex.schnykjaer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: competex-backend-service
            port:
              number: 8080
